--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | AsmrProg</title>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <a style="font-size: 40px;" href="/en-us/100js/100js.html">100%JS (English, United States)</a>
-    <br>
-    <br>
-    <br>
-    <a style="font-size: 40px;" href="/en-us/asmrcoding/asmrcoding.html">ASMRCODING (English, United States)</a>
+    <h2>webdevelopment-rafaelprods.github.io</h2>
+    <div class="elements">
+        <a href="/en-us/100js/100js.html">
+            <div class="category left">
+                <img src="/assets/media/100js/favicon.ico" alt="Icon">
+                <h3>100 Days of JavaScript Coding</h3>
+            </div>
+        </a>
+        <a href="/en-us/asmrcoding/asmrcoding.html">
+            <div class="category right">
+                <img src="/assets/media/asmrcoding/favicon.ico" alt="Icon">
+                <h3>Coding with AsmrProg</h3>
+            </div>
+        </a>
+    </div>
 </body>
 </html>
