--- a/en-us/asmrcoding/asmrcoding.html
+++ b/en-us/asmrcoding/asmrcoding.html
@@ -26,6 +26,7 @@
         <section id="grid-projects">
 
             <a href="/en-us/asmrcoding/1.html"><img src="/assets/media/asmrcoding/projects-icons/project-1.png" alt="Project"></a>
+            <a href="/en-us/asmrcoding/2.html"><img src="/assets/media/asmrcoding/projects-icons/project-2.png" alt="Project"></a>
 
         </section>
 
