--- a/en-us/asmrcoding/asmrcoding.html
+++ b/en-us/asmrcoding/asmrcoding.html
@@ -27,6 +27,7 @@
 
             <a href="/en-us/asmrcoding/1.html"><img src="/assets/media/asmrcoding/projects-icons/project-1.png" alt="Project"></a>
             <a href="/en-us/asmrcoding/2.html"><img src="/assets/media/asmrcoding/projects-icons/project-2.png" alt="Project"></a>
+            <a href="/en-us/asmrcoding/3.html"><img src="/assets/media/asmrcoding/projects-icons/project-3.png" alt="Project"></a>
 
         </section>
 
