--- a/en-us/asmrcoding/asmrcoding.html
+++ b/en-us/asmrcoding/asmrcoding.html
@@ -30,6 +30,7 @@
             <a href="/en-us/asmrcoding/3.html"><img src="/assets/media/asmrcoding/projects-icons/project-3.png" alt="Project"></a>
             <a href="/en-us/asmrcoding/4.html"><img src="/assets/media/asmrcoding/projects-icons/project-4.png" alt="Project"></a>
             <a href="/en-us/asmrcoding/5.html"><img src="/assets/media/asmrcoding/projects-icons/project-5.png" alt="Project"></a>
+            <a href="/en-us/asmrcoding/6.html"><img src="/assets/media/asmrcoding/projects-icons/project-6.png" alt="Project"></a>
 
         </section>
 
