--- a/en-us/asmrcoding/asmrcoding.html
+++ b/en-us/asmrcoding/asmrcoding.html
@@ -31,6 +31,8 @@
             <a href="/en-us/asmrcoding/4.html"><img src="/assets/media/asmrcoding/projects-icons/project-4.png" alt="Project"></a>
             <a href="/en-us/asmrcoding/5.html"><img src="/assets/media/asmrcoding/projects-icons/project-5.png" alt="Project"></a>
             <a href="/en-us/asmrcoding/6.html"><img src="/assets/media/asmrcoding/projects-icons/project-6.png" alt="Project"></a>
+            <a href="/en-us/asmrcoding/7.html"><img src="/assets/media/asmrcoding/projects-icons/project-7.png" alt="Project"></a>
+            <a href="/en-us/asmrcoding/8.html"><img src="/assets/media/asmrcoding/projects-icons/project-8.png" alt="Project"></a>
 
         </section>
 
