--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebDev by RafaelProds</title>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="shortcut icon" href="/assets/media/asmrcoding/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h2>webdevelopment-rafaelprods.github.io</h2>
