--- a/en-us/asmrcoding/asmrcoding.html
+++ b/en-us/asmrcoding/asmrcoding.html
@@ -33,6 +33,7 @@
             <a href="/en-us/asmrcoding/6.html"><img src="/assets/media/asmrcoding/projects-icons/project-6.png" alt="Project"></a>
             <a href="/en-us/asmrcoding/7.html"><img src="/assets/media/asmrcoding/projects-icons/project-7.png" alt="Project"></a>
             <a href="/en-us/asmrcoding/8.html"><img src="/assets/media/asmrcoding/projects-icons/project-8.png" alt="Project"></a>
+            <a href="/en-us/asmrcoding/9.html"><img src="/assets/media/asmrcoding/projects-icons/project-9.png" alt="Project"></a>
 
         </section>
 
