--- a/en-us/asmrcoding/asmrcoding.html
+++ b/en-us/asmrcoding/asmrcoding.html
@@ -34,6 +34,8 @@
             <a href="/en-us/asmrcoding/7.html"><img src="/assets/media/asmrcoding/projects-icons/project-7.png" alt="Project"></a>
             <a href="/en-us/asmrcoding/8.html"><img src="/assets/media/asmrcoding/projects-icons/project-8.png" alt="Project"></a>
             <a href="/en-us/asmrcoding/9.html"><img src="/assets/media/asmrcoding/projects-icons/project-9.png" alt="Project"></a>
+            <a href="/en-us/asmrcoding/10.html"><img src="/assets/media/asmrcoding/projects-icons/project-10.png" alt="Project"></a>
+            <a href="/en-us/asmrcoding/11.html"><img src="/assets/media/asmrcoding/projects-icons/project-11.png" alt="Project"></a>
 
         </section>
 
