--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="/assets/media/asmrcoding/favicon.ico" type="image/x-icon">
 </head>
 <body>
+
+    <div style="display: flex; justify-content: center; text-align: center; align-items: center; background: #aa0000; color: #f5f5f5; height: 10vh;" class="banner"><p><span style="font-weight: 600;">INFORMATION:</span> 100 Days of JavaScript Coding starts on May 20th and ends on September 1st, 2024!</p></div>
+
     <h2>webdevelopment-rafaelprods.github.io</h2>
     <div class="elements">
         <a href="/en-us/100js/100js.html">
